# MiniRustDesk

./: Cargo.toml
mini_rustdesk_agent/: Cargo.toml
mini_rustdesk_server/: Cargo.toml  build.rs
mini_rustdesk_server/src/: common.rs  compress.rs  config.rs  database.rs  fs.rs  main.rs  peer.rs  relay_server.rs  rendezvous_server.rs  tcp.rs  udp.rs
mini_rustdesk_server/src/protos/: message.rs  rendezvous.rs
mini_rustdesk_utils/: Cargo.toml
mini_rustdesk_utils/src/: main.rs
