[package]
name = "mini_rustdesk_server"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = { version = "3.1", features = ["with-bytes"] }
tokio = { version = "1.20", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
anyhow = "1.0"
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset", "dont_minimize_extra_stacks"] }
clap = "2"
log = "0.4"
ipnetwork = "0.20"
sodiumoxide = "0.2"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono", "json" ] }
deadpool = "0.8"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
lazy_static = "1.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
bytes = { version = "1.2", features = ["serde"] }
zstd = "0.9"
winapi = { version = "0.3", features = ["fileapi"] }
filetime = "0.2"
tokio-socks = { git = "https://github.com/open-trade/tokio-socks" }
socket2 = { version = "0.3", features = ["reuseport"] }
tokio-tungstenite = "0.17"
tungstenite = "0.17"
base64 = "0.13"
futures-util = "0.3"

[build-dependencies]
protobuf-codegen = { version = "3.1" }